# POC-MarketPredictor-ML

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc.json  .readthedocs.yaml  .secrets.baseline  AUTOMATED_DEPLOYMENT.md  BACKLOG.md  BACKLOG_NEW.md  CHANGELOG_2026-01-11.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_SUMMARY.md  Dockerfile  GITHUB_SECRETS.md  IMPLEMENTATION_SUMMARY.md  Makefile  OVERVIEW.md  PRODUCTION_READY.md  PR_DESC_DEV_TO_MAIN.md  Procfile  QUICKSTART.md  README.md  README_SERVERS.md  SECRETS.md  SESSION_SUMMARY_2025_12_02.md  SPEC.md  backlog.md  docker-compose.yml  gunicorn_conf.py  netlify.toml  pyproject.toml  pytest.ini  railway.toml  render.yaml  requirements.txt  start.sh  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-commit
.specify/: CONSTITUTION_CONFIG_AUDIT.md
01_Trading_Fun/: README.md  requirements.txt
POC-MarketPredictor-ML.wiki/: API-Reference.md  FAQ.md  Home.md  POC-Trading.md  Troubleshooting.md
archive/: ARCHIVE_MANIFEST.md  README.md
backtest/: backtester.py
config/: assets.json  risk_limits.json
data/: market_predictor.db  trading_fun.db
docs/: ACCESSIBILITY_AUDIT.md  ACCESSIBILITY_TESTING.md  ADR-002-model-training-strategy.md  ADR-003-caching-strategy.md  API_INTEGRATION.md  ARCHITECTURE.md  BACKEND_DEPLOYMENT.md  BACKEND_ML_ASSESSMENT.md  BACKLOG.md  BRANCH_PROTECTION_SETUP.md  DECISION_SUPPORT_SYSTEM_REQUIREMENTS.md  DOCUMENTATION_STRUCTURE.md  ENDPOINT_IMPLEMENTATION_STATUS.md  FAQ.md  FRONTEND_DEPLOYMENT.md  GIT_HOOKS.md  IMPROVEMENTS_SUMMARY.md  MANUAL_TEST_RESULTS.md  MIGRATION_20260101.md  ML_RETRAINING.md  NEXT_LEVEL_SUMMARY.md  PERFORMANCE_MONITORING.md  PERFORMANCE_OPTIMIZATION.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE_1_SUMMARY.md  PRODUCTION_FEATURES.md  PRODUCT_REQUIREMENTS.md  PRODUCT_ROADMAP_2026.md  QUICK_STATUS.md  REORGANIZATION_COMPLETE.md  TRADER_GUIDE.md  (+12 more)
(+581 files in other folders)
